# advent-of-code

./: .gitignore  README.md
2023/: CMakeLists.txt  Cargo.toml  Makefile  package.json  vite.config.js
2023/src/: constants.rs  constants.ts  main.cpp  main.rs  main.ts  run-aoc.ts
2023/src/day1/: day1-main.test.ts  day1-main.ts  day1.ts  day1main.rs  mod.rs
2023/src/day10/: day10-main.test.ts  day10-main.ts  pipe-map-parse.ts  pipe-map.ts  pipe-part.ts
2023/src/day11/: day11_main.rs  galaxy_map.rs  mod.rs
2023/src/day2/: day2-main.test.ts  day2-main.ts  day2main.rs  game.rs  game_parse.rs  mod.rs
2023/src/day3/: day3-main.test.ts  day3-main.ts  day3.ts
2023/src/day4/: day4-main.ts  day4main.rs  mod.rs  scratch_card.rs
2023/src/day5/: almanac.rs  almanac_parse.rs  day5main.rs  mod.rs
2023/src/day6/: boat_race.rs  boat_race_parse.rs  day6main.rs  mod.rs
2023/src/day7/: camel_hand_parse.rs  day7main.rs  mod.rs  playing_card.rs
2023/src/day8/: day8main.cpp  day8main.h  desert-map-parse.h  desert-map.h
2023/src/day9/: day9-main.test.ts  day9-main.ts  oasis-report-parse.ts  oasis-report.ts
2023/src/util/: date-time-util.ts  input-util.h  input-util.ts  input_util.rs  log_util.rs  mod.rs  print-util.ts  print_util.rs  str-util.h  time-util.h  timer.rs  timer.ts  validate-primitives.ts
2024/: 2024-dev-1.rockspec  Makefile  build.zig  eslint.config.mjs  go.mod  init.lua  package-lock.json  package.json
2024/input/: day15_test-e2.txt  day16_test-e1.txt  day16_test-e2.txt  (+4 more)
2025/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
(+126 files in other folders)
